src/css/styles.css
/* ... */
.contact .contact-form .form-item textarea.form-control {
    height: 140px;
}

.contact .contact-form .btn {
    height: 50px;
    padding: 0 50px;
}

@media (max-width:1199px) {
    .aside {
        left: -270px;
    }

    .aside.open {
        left: 0;
    }

    .aside .nav-toggler {
        display: flex;
        left: 30px; 
    }

    .aside .nav-toggler.open {
        left: 300px;
    }

    .section {
        left: 0;
    }

    .section .container {
        padding-top: 70px;
    }

    .section.open {
        left: 270px;
    }

    .about .about-content .personal-info .info-item p span {
        display: block;
        margin-left: 0;
    }

}

@media (max-width:991px) {

    .home .home-img,
    .about .about-content .personal-info,
    .about .about-content .skills,
    .about .about-content .education,
    .about .about-content .experience,
    .contact .contact-info-item,
    .projects .projects-item,
    .service .service-item {
        flex: 0 0 100%;
        max-width: 100%;
    }

    .home .home-info {
        flex: 0 0 100%;
        max-width: 100%;
        margin-bottom: 70px;
    }

    .home-img::before {
        left: 30%;
    }

    .home-img::after {
        right: 30%;
    }

    .projects .projects-item {
        flex: 0 0 50%;
        max-width: 50%;
    }

    .projects .projects-item-inner .projects-img img {
        width: 100%;
        height: 450px;
    }

}

@media (max-width:767px) {

    .contact .contact-form .col-6,
    .projects .projects-item {
        flex: 0 0 100%;
        max-width: 100%;
    }
    .home-img::before {
        left: 20%;
    }

    .home-img::after {
        right: 20%;
    }

}

